Add unit tests to reach 50% coverage
Ripped out the dcae controller code which is no longer
needed.

Issue-ID: DCAEGEN2-257
